Added -XX:+IgnoreUnrecognizedVMOptions and put JDK 17 ignores back